--- a/public/Login.html
+++ b/public/Login.html
@@ -172,7 +172,7 @@ h78.747C231.693,100.736,232.77,106.162,232.77,111.694z"
   </div>
 </div>
 
-<script src="login.js"></script>
+<script src="/login.js" defer></script>
 </body>
 </html>
 
