--- a/public/Login.html
+++ b/public/Login.html
@@ -151,19 +151,42 @@ h78.747C231.693,100.736,232.77,106.162,232.77,111.694z"
       ⓈⒾⒼⓃ ⒾⓃ ⓉⓄ ⓎⓄⓊⓇ ⒶⒸⒸⓄⓊⓃⓉ
     </div>
 
-   <form class="form" id="loginForm">
-  <div class="input-field">
-    <input required autocomplete="off" type="tel" id="loginPhone" name="phone" />
-    <label for="loginPhone">Phone Number</label>
-  </div>
-
-  <div class="input-field">
-    <input required autocomplete="off" type="password" id="loginPassword" name="password" />
-    <label for="loginPassword">Password</label>
-  </div>
-
-  <button type="submit" class="btn">Submit</button>
+   <form id="loginForm">
+  <input name="phone" id="phone" placeholder="Phone" required />
+  <input type="password" name="password" id="password" placeholder="Password" required />
+  <button type="submit">Login</button>
 </form>
+
+<div id="loginMessage"></div>
+
+<script>
+document.getElementById("loginForm").addEventListener("submit", async (e) => {
+  e.preventDefault();
+
+  const phone = document.getElementById("phone").value;
+  const password = document.getElementById("password").value;
+
+  try {
+    const res = await fetch("/api/login", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ phone, password })
+    });
+
+    const data = await res.json();
+    const messageDiv = document.getElementById("loginMessage");
+
+    if (res.ok) {
+      messageDiv.textContent = "Login successful! Redirecting...";
+      setTimeout(() => window.location.href = "/index.html", 1000);
+    } else {
+      messageDiv.textContent = data.error || "Login failed";
+    }
+  } catch (err) {
+    document.getElementById("loginMessage").textContent = "Network error!";
+  }
+});
+</script>
 
   <div class="acc-text">
     New here?
@@ -173,7 +196,7 @@ h78.747C231.693,100.736,232.77,106.162,232.77,111.694z"
   </div>
 </div>
 
-<script src="/login.js" defer></script>
+<script src="/logon.js" defer></script>
 </body>
 </html>
 
